Corrected error in test assertions and some general code refactoring